--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -85,6 +86,7 @@
         "react-perfect-scrollbar": "^1.5.8",
         "tailwindcss": "^3.3.2",
         "typescript": "^4.9.3",
-        "vite": "^4.1.0"
+        "vite": "^4.1.0",
+        "vitest": "^1.1.0"
     }
 }
